          rectified in berrybrew after it's "off" feature was added
        - several POD corrections
        - confirmed that all tests still pass after berrybrew version
          sb-20160602 changes
        - fixed a couple of tests that had the perl ver hard-coded
        - fixed two tests that were trying to use a regex in is()

2.06    2016-06-12
        - no functional changes
        - BBDEV_TESTING tests now require a version (eg: 5.24.0) set in
          $ENV{PERLVER}, instead of having 5.22.1 hardcoded for a few test
          files, and other tests don't use the ver anymore (closes #132)
        - tests now reside in sub-directories, cleaning the t/ directory up
          significantly (closes #133)
        - fixed config file doc link in BrewBuild's POD (closes #131)
        - new berrybrew build, in prep for using --on on Windows
          (https://github.com/stevieb9/berrybrew ver: sb-20160601)

2.05    2016-05-06
        - added [brewbuild] section to config file (closes #128)
        - cleaned up test logic due to failing MSWin tests
        - switched from CPAN::ReverseDependencies to MetaCPAN::Client, as the
          former was using MetaCPAN::API which is depricated, and failing to
          install on MSWin systems. (I sent a PR to the dist which fixes it). We
          now have our own revdep discovery process
        - fixed logic issue where -1 wasn't being used in instance_install(),
          breaking the ability to install all perl instances (fixes #130)

2.04    2016-04-27
        - Results from MSWin now properly show the _bit suffix for the perl used
          in test results (closes #124)
        - instance_install() when installing randomly doesn't attempt duplicate
          versions any longer (fixes #123)
        - cleaned up formatting of revdep returned output (closes #126)
        - on Unix, we now include Release Candidate perl instances when using
          random install, eg perl-5.24.0-RC3 (closes #127)